gccida/g0/init_flow
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_flow/src/cfg.c:596:6: error: use of undeclared identifier 'initialized_12'
if ( initialized_12 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_flow/src/cfg.c:633:1: error: use of undeclared identifier 'initialized_12'
initialized_12 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_flow/src/obj/cfg.o] Error 1
